# awsug-cert-generator

./: Dockerfile  LICENSE  README.md  app.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
assets/logos/: README.txt
assets/signatures/: README.txt
config/: certificate.yml
data/: participants.sample.csv
docs/: index.html  verify.html
src/: generate.py  manifest.py  pdf.py  qr.py  utils.py
templates/: index.html
